# fakturoid-connector

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: infographic.html
docs/plans/: 2026-03-18-fakturoid-connector.md
skills/fakturoid-connector/: SKILL.md
src/fakturoid_connector/: __init__.py  abo.py  cli.py  client.py  mcp_server.py  notifications.py  reports.py
tests/: test_abo.py  test_cli.py  test_client.py  test_notifications.py  test_reports.py
